added team invitation logic
